fix bug scrolling on mobile and edit grammar

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,7 @@
     @apply cursor-pointer;
   }
 }
+
+html, body {
+  overflow-x: hidden;
+}
